--- a/app/src/main/res/layout/activity_igniter_dash_board.xml
+++ b/app/src/main/res/layout/activity_igniter_dash_board.xml
@@ -104,7 +104,7 @@
         android:paddingLeft="20dp"
         android:background="@drawable/egintersearchbox"
         android:textSize="18dp"
-        android:text="Try to enter any hotel name"
+        android:hint="Try to enter any hotel name"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         tools:ignore="MissingConstraints" />
