--- a/app/src/main/res/layout/recentcard.xml
+++ b/app/src/main/res/layout/recentcard.xml
@@ -34,9 +34,9 @@
                         android:background="@color/sky_blue"/>
             </androidx.cardview.widget.CardView>
             <ImageView
+                android:id="@+id/status_Image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/png_timer"
                 android:layout_marginStart="5dp"
                 android:layout_toEndOf="@id/card_marketing"
                 app:layout_constraintStart_toEndOf="@id/card_marketing"
