--- a/app/src/main/res/layout/activity_detail_task.xml
+++ b/app/src/main/res/layout/activity_detail_task.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <ImageView
-        android:id="@+id/add_tasks_back_btn"
+        android:id="@+id/d_tasks_back_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
         app:srcCompat="@drawable/back_btn"
@@ -34,7 +34,7 @@
         android:textColor="@color/black"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_toEndOf="@id/add_tasks_back_btn"/>
+        android:layout_toEndOf="@id/d_tasks_back_btn"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/save_property"
@@ -44,7 +44,7 @@
         app:cardCornerRadius="16dp"
         android:layout_marginVertical="20dp"
         android:layout_marginStart="12dp"
-        android:layout_below="@id/add_tasks_back_btn">
+        android:layout_below="@id/d_tasks_back_btn">
 
         <TextView
             android:layout_width="wrap_content"
