--- a/app/src/main/res/layout/activity_view_all_task_of_property.xml
+++ b/app/src/main/res/layout/activity_view_all_task_of_property.xml
@@ -103,19 +103,18 @@
             android:id="@+id/ratingBar_client"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:numStars="5"
             android:progressBackgroundTint="#a8a8a8"
             android:progressTint="#FBBC05"
-            android:rating="2.5"
-            android:scaleX="0.35"
-            android:scaleY="0.35"
+            android:rating="2"
+            android:scaleX="0.4"
+            android:scaleY="0.4"
             android:stepSize="0.1"
-            android:visibility="visible"
-            app:layout_constraintTop_toTopOf="@+id/Client_hotel_country"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            app:layout_constraintTop_toBottomOf="@+id/Client_hotel_country"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="-60dp"
             tools:ignore="MissingConstraints"
+            android:layout_marginStart="-30dp"
             tools:layout_editor_absoluteX="-42dp" />
 
         <ImageView
