--- a/app/src/main/res/layout/activity_view_all_tasks.xml
+++ b/app/src/main/res/layout/activity_view_all_tasks.xml
@@ -109,6 +109,20 @@
             android:layout_below="@id/recyclerViewDate"
            />
 
+    <TextView
+        android:id="@+id/task_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="300dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        />
+
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/shimmer_tasks_view_container"
             android:layout_width="wrap_content"
