Completed Tab Done

--- a/app/src/main/res/layout/fragment_client_completed_tab.xml
+++ b/app/src/main/res/layout/fragment_client_completed_tab.xml
@@ -5,18 +5,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.retvence.rscoop.DashBoardClient.ClientTabs.ClientCompletedTabFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/client_completed_tab_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
 
-    <TextView
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_tasks_c_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Working On Progress"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/avenir"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:id="@+id/shimmer_layout_tasks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/white">
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+            <include layout = "@layout/shimmer_for_activity"/>
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
