--- a/app/src/main/res/layout/clientcountryxml.xml
+++ b/app/src/main/res/layout/clientcountryxml.xml
@@ -99,6 +99,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
          <ImageView
+             android:id="@+id/mail"
              android:layout_width="20dp"
              android:layout_height="20dp"
             android:src="@drawable/png_msg"
