--- a/app/src/main/res/layout/fragment_client_dashboard.xml
+++ b/app/src/main/res/layout/fragment_client_dashboard.xml
@@ -132,10 +132,9 @@
 
 
                 <TextView
-                    android:id="@+id/total_task"
+                    android:id="@+id/total_task3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/have_total"
                     android:fontFamily="@font/avenir"
                     android:textSize="14sp"
                     android:textColor="@color/black"
@@ -154,11 +153,10 @@
                     android:layout_marginBottom="@dimen/margin_10"
                     android:layout_marginHorizontal="25dp"
                     app:rpbCornerRadius="20dp"
-                    app:rpbProgress="40"
                     app:rpbProgressColor="@color/sky_blue"
                     app:rpbShowProgressText="false"
-                    app:layout_constraintTop_toBottomOf="@id/total_task"
-                    app:layout_constraintStart_toStartOf="@id/total_task"/>
+                    app:layout_constraintTop_toBottomOf="@id/total_task3"
+                    app:layout_constraintStart_toStartOf="@id/total_task3"/>
 
 
                 <androidx.cardview.widget.CardView
@@ -167,7 +165,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
                     app:layout_constraintTop_toBottomOf="@id/progressBarCD"
-                    app:layout_constraintStart_toStartOf="@id/total_task">
+                    app:layout_constraintStart_toStartOf="@id/total_task3">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -196,10 +194,9 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
                         <TextView
-                            android:id="@+id/todo_text"
+                            android:id="@+id/todo_text3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="6 Tasks "
                             android:textStyle="normal"
                             android:fontFamily="@font/avenir"
                             android:textSize="14sp"
@@ -248,7 +245,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"/>
                         <TextView
-                            android:id="@+id/todo_done_text"
+                            android:id="@+id/todo_done_text3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="8 Tasks "
