--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -92,9 +92,8 @@
         android:id="@+id/total_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/have_total"
         android:fontFamily="@font/avenir"
-        android:textSize="14sp"
+        android:textSize="16dp"
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
