--- a/app/src/main/res/layout/fragment_client_favorite.xml
+++ b/app/src/main/res/layout/fragment_client_favorite.xml
@@ -1,4 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,13 +12,11 @@
         android:text="All your favorite task"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:layout_marginTop="15dp"
+        android:layout_margin="15dp"
         android:fontFamily="@font/avenir"
         android:textColor="@color/black"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_Tasks_favorite"
@@ -26,17 +24,13 @@
         android:layout_height="wrap_content"
         tools:listitem="@layout/recentcard"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ftask"/>
+        android:layout_below="@id/ftask"/>
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_tasks_view_container_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ftask">
+        android:layout_below="@id/ftask">
 
         <LinearLayout
             android:id="@+id/shimmer_layout_tasks"
@@ -60,4 +54,4 @@
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
