--- a/app/src/main/res/layout/activity_view_all_task_of_property.xml
+++ b/app/src/main/res/layout/activity_view_all_task_of_property.xml
@@ -284,6 +284,7 @@
             android:textSize="16dp"/>
 
         <TextView
+            android:id="@+id/googleReview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/review"
@@ -335,6 +336,7 @@
             android:textSize="16dp"/>
 
         <TextView
+            android:id="@+id/tripAdvisorReview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/review"
@@ -382,6 +384,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="December 2020"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/selectDate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/c_dat"
+            style="@style/TextAppearance.MaterialComponents.Subtitle2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="December 2020"
+            android:visibility="gone"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/selectDate"
             app:layout_constraintStart_toStartOf="parent"
