--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="background_color">#5D5AF6</color>
     <color name="sky_blue">#4A7AF7</color>
+    <color name="red_favourite">#FF2D55</color>
     <color name="light_grey">#C7C7CC</color>
     <color name="add_details">#8A8A8A</color>
 </resources>
