--- a/app/src/main/res/layout/activity_hotels_locations.xml
+++ b/app/src/main/res/layout/activity_hotels_locations.xml
@@ -84,13 +84,12 @@
 
         <TextView
             android:id="@+id/hotel_country"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Hotel_Name2"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
-            android:text="California, United States"
             tools:ignore="MissingConstraints"
             />
 
@@ -99,7 +98,7 @@
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="-15dp"
             android:numStars="5"
             android:progressBackgroundTint="#a8a8a8"
             android:progressTint="#FBBC05"
@@ -108,7 +107,7 @@
             android:scaleY="0.35"
             android:stepSize="0.1"
             android:visibility="visible"
-            app:layout_constraintTop_toTopOf="@+id/hotel_country"
+            app:layout_constraintTop_toBottomOf="@+id/hotel_country"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="-60dp"
             tools:ignore="MissingConstraints"
@@ -121,10 +120,10 @@
             android:src="@drawable/email"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="150dp"
-            app:layout_constraintTop_toBottomOf="@+id/Hotel_Name2"
-            app:layout_constraintStart_toEndOf="@id/hotel_country"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="60dp"
+            app:layout_constraintTop_toBottomOf="@+id/Hotel_Name2"
+            app:layout_constraintEnd_toEndOf="parent"
+
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -134,9 +133,8 @@
             android:src="@drawable/phonepng"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/Hotel_Name2"
-            app:layout_constraintStart_toEndOf="@id/hotel_country"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="170dp"
+            android:layout_marginRight="20dp"
             tools:ignore="MissingConstraints" />
 
 
@@ -146,10 +144,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/twitter"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
         <ImageView
             android:id="@+id/whatsappLink"
@@ -157,10 +155,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/whatsapp"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="60dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
         <ImageView
             android:id="@+id/tripadivisorLink"
@@ -168,10 +166,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/tripadvisor"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="100dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
 
         <ImageView
@@ -180,10 +178,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/pinterest"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="140dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
         <ImageView
             android:id="@+id/linkdinLink"
@@ -191,10 +189,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/linkedin"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="180dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
         <ImageView
             android:id="@+id/instagramLink"
@@ -202,10 +200,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/instagram"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="220dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
         <ImageView
             android:id="@+id/googleLink"
@@ -213,10 +211,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/google"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="260dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
         <ImageView
             android:id="@+id/facebookLink"
@@ -224,10 +222,10 @@
             android:layout_height="30dp"
             tools:ignore="MissingConstraints"
             android:src="@drawable/facebook"
-            app:layout_constraintTop_toBottomOf="@+id/PhoneCall"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="300dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             />
 
         <TextView
@@ -459,6 +457,7 @@
             />
 
         <TextView
+            android:id="@+id/About"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:text="@string/description"
