--- a/app/src/main/res/layout/activity_hotel_profile.xml
+++ b/app/src/main/res/layout/activity_hotel_profile.xml
@@ -382,6 +382,22 @@
             app:layout_constraintTop_toBottomOf="@+id/review"
             tools:ignore="MissingConstraints" />
 
+
+        <TextView
+            android:id="@+id/showDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="120dp"
+            android:fontFamily="@font/akaya_telivigala"
+            android:text="Select Date"
+            android:visibility="gone"
+            android:textSize="25dp"
+            android:textColor="#383842"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/review"
+            tools:ignore="MissingConstraints" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginLeft="10dp"
             android:id="@+id/recyclerViewDate1"
