--- a/app/src/main/res/layout/fragment_client_profile.xml
+++ b/app/src/main/res/layout/fragment_client_profile.xml
@@ -13,7 +13,7 @@
         android:id="@+id/client_Hotel_Name_profile"
         android:layout_width="285dp"
         android:layout_height="wrap_content"
-        android:text="Hotel Name"
+        android:text="Client Name"
         android:textSize="25dp"
         android:textStyle="bold"
         android:fontFamily="@font/avenir"
@@ -26,7 +26,7 @@
         android:id="@+id/client_hotel_cover_profile"
         android:layout_width="match_parent"
         android:layout_height="220dp"
-        android:src="@drawable/png_hotel"
+        android:src="@drawable/png_image"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="15dp"
         android:adjustViewBounds="true"
@@ -43,9 +43,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/client_Hotel_Name_profile"
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
@@ -73,7 +73,7 @@
         android:id="@+id/client_hotel_profile"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/png_hotel_profile"
+        android:src="@drawable/png_image"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
         android:id="@+id/Client_Hotel_Name2_profile"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:text="Hotel Name"
+        android:text="Client Name"
         android:layout_marginTop="5dp"
         android:textAlignment="center"
         android:textSize="20dp"
@@ -104,7 +104,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
-        android:text="7905845935"
         android:textSize="17dp"
         tools:ignore="MissingConstraints"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +114,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="California, United States"
         android:textSize="17dp"
         tools:ignore="MissingConstraints"
         app:layout_constraintStart_toStartOf="parent"
