--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -155,6 +155,7 @@
                 android:gravity="center_vertical">
 
                 <EditText
+                    android:inputType="numberDecimal"
                     android:id="@+id/client_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -319,6 +320,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
+                android:id="@+id/nextActivity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
